:sparkles: Add short_pwd support as a tab title format :zap: Remove transparency for terminal panes with an opaque background :bug: Fix pty UTF-8 parsing :rotating_light: Apply clippy suggestions :art: Clean codebase

--- a/src/style/tab.scss
+++ b/src/style/tab.scss
@@ -44,7 +44,7 @@
         width: calc(100% - 64px);
         text-align: center;
         font-weight: 600;
-        line-height: 12px;
+        line-height: 14px;
     }
 
     .close {
